--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Olayinka247/Netflix-backed#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -28,8 +29,11 @@
     "express-validator": "^6.14.0",
     "fs-extra": "^10.1.0",
     "http-errors": "^2.0.0",
+    "image-to-base64": "^2.2.0",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
+    "pdfmake": "^0.2.5",
+    "striptags": "^3.2.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
